# rone-swarm-sim

./: .gitignore
gz_ws/src/ardupilot_gazebo/: need.txt  paperneed.txt
gz_ws/src/ardupilot_gazebo/config/: gazebo-iris-gimbal.parm
gz_ws/src/ardupilot_gazebo/models/iris_gimbal_i0/: model.config  model.sdf
gz_ws/src/ardupilot_gazebo/scripts/: formation_switch.sh  land_all.sh  start_bridge_all.sh  start_gazebo.sh  start_sitl_all.sh  start_swarm_all.sh  start_swarm_button_panel.sh  start_swarm_controller.sh  swarm_button_panel.py  swarm_logs.sh  swarm_start.sh  swarm_stop.sh  takeoff_all.py  takeoff_all.sh  takeoff_all_v2.sh
gz_ws/src/ardupilot_gazebo/worlds/: gazebo_6uav.sdf  need.txt
ros2_ws/src/swarm_control/: package.xml  setup.py
ros2_ws/src/swarm_control/config/: formation_configs.yaml  swarm_params.yaml
ros2_ws/src/swarm_control/docs/: FINAL_USER_GUIDE.md  THESIS_DEFENSE_SUMMARY.md  THESIS_REVISION_TECHNICAL_NOTE.md  paper1.md  thesis_draft_full.md
ros2_ws/src/swarm_control/launch/: formation_cmd.launch.py  ground_station.launch.py  single_drone.launch.py  swarm_bringup.launch.py
ros2_ws/src/swarm_control/swarm_control/: __init__.py  drone_controller.py  formation_commander.py  search_mission_demo.py  swarm_ground_station.py
ros2_ws/src/swarm_control/swarm_control/swarm_algorithms/: boid_rules.py  communication.py  formation_control.py  obstacle_avoidance.py
ros2_ws/src/swarm_control/swarm_control/utils/: math_utils.py
ros2_ws/src/swarm_control/tools/: run_real_measurement.py  test1.py  test1_result.json  test2.py  test2_result.json  test3_result.json  test3_stress_compare.py
ros2_ws/src/swarm_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/swarm_msgs/msg/: SwarmState.msg
ros2_ws/src/uav_bridge/: QGC_SWARM_DEMO_ONEPAGE.md  QGC_SWARM_GUIDE.md  README.md  package.xml  setup.py
ros2_ws/src/uav_bridge/launch/: camera_mavlink.launch.py  mavlink_tx.launch.py  qgc_bridge.launch.py
ros2_ws/src/uav_bridge/uav_bridge/: __init__.py  compat.py  mavlink_bridge.py  mavlink_dump.py  mavlink_tx.py  qgc_bridge.py  swarm_formation.py
ros2_ws/src/uav_bridge/uav_bridge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
(+10 files in other folders)
