<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>swarm_control</name>
  <version>1.0.0</version>
  <description>分布式无人机蜂群协同控制系统</description>
  <maintainer email="cookie@todo.todo">cookie</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>swarm_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
