<?xml version="1.0"?>
<package format="3">
  <name>uav_bridge</name>
  <version>0.0.1</version>
  <description>MAVLink &lt;-&gt; ROS2 bridge (ArduPilot SITL)</description>
  <maintainer email="your_email@example.com">level6</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>pymavlink</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <!-- Optional visualization / image bridge; tolerate missing on Foxy/Humble/Jazzy -->
  <exec_depend>ros_gz_image</exec_depend>
  <exec_depend>rqt_image_view</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
